<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/largeExtraDisplay" />

    <TextView
        android:id="@+id/idealShiftDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="00:00:00"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/maxShiftDisplay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idealShift" />

    <TextView
        android:id="@+id/maxShiftDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:text="00:00:00"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/idealShiftDisplay"
        app:layout_constraintTop_toBottomOf="@+id/maxShift" />

    <TextView
        android:id="@+id/idealShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/ideal_shift"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/maxShift"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/largeExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/large_extra"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/smallExtra"
        app:layout_constraintTop_toBottomOf="@+id/maxShiftDisplay" />

    <TextView
        android:id="@+id/smallExtraDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="00:00:00"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/largeExtraDisplay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallExtra" />

    <TextView
        android:id="@+id/maxShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="188dp"
        android:text="@string/max_shift"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/idealShift"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smallExtra"
        android:layout_width="101dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/small_extra"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/largeExtra"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idealShiftDisplay" />

    <TextView
        android:id="@+id/largeExtraDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:text="00:00:00"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/smallExtraDisplay"
        app:layout_constraintTop_toBottomOf="@+id/largeExtra" />
</androidx.constraintlayout.widget.ConstraintLayout>